<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <ImageView
        android:id="@+id/ImageHelp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:alpha=".20"
        app:srcCompat="@drawable/liverpool_help" />

    <TextView
        android:id="@+id/TextIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="11dp"
        android:textColor="#000000"
        android:text="@string/Intro" />

    <TextView
        android:id="@+id/Text1"
        android:layout_width="402dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="144dp"
        android:textColor="#000000"
        android:text="@string/Help1" />

    <TextView
        android:id="@+id/Text2"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:textColor="#000000"
        android:text="@string/Help3" />

    <TextView
        android:id="@+id/Text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="133dp"
        android:textColor="#000000"
        android:text="@string/Help2" />

    <TextView
        android:id="@+id/Text4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="68dp"
        android:textColor="#000000"
        android:text="@string/Help4" />

    <TextView
        android:id="@+id/Text5"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:textColor="#000000"
        android:text="@string/Help5" />

</RelativeLayout>