<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".lanternactivity">

    <Button
        android:id="@+id/buttonEnable"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_camera_enabled"
        android:textColor="#F2F2F2"
        android:textSize="25sp"
        android:shadowColor="#8A8A8A"
        android:shadowDx="0"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:layout_width="250dp"
        android:layout_height="42dp"
        android:text="@string/enable" />

    <Button
        android:id="@+id/aprinde"
        android:layout_width="181dp"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_bulb_led"
        android:shadowColor="#8A8A8A"
        android:shadowDx="0"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/aprinde"
        android:textColor="#FFF1D6"
        android:textSize="20sp" />

    <Button
        android:id="@+id/animatie"
        android:layout_width="181dp"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp"
        android:background="@drawable/button_bulb_led"
        android:shadowColor="#8A8A8A"
        android:shadowDx="0"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/animation"
        android:textColor="#FFF1D6"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/bulb_off"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:contentDescription="@drawable/bulb_off"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/bulb_off" />
</RelativeLayout>